--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,12 +16,12 @@
       rel="icon"
       sizes="76x76"
       type="image/png"
-      href="%PUBLIC_URL%/logobazakshort.png"
+      href="%PUBLIC_URL%/favicon.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="%PUBLIC_URL%/logobazakshort.png"
+      href="%PUBLIC_URL%/apple-icon.png"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -37,7 +37,7 @@
       href="https://fonts.googleapis.com/css?family=Fredoka:200,300,400,600,700,800"
       rel="stylesheet"
     /> -->
-    <title>בז"כ</title>
+    <title>generic site</title>
   </head>
   <body>
     <noscript>
